--- a/_config.yml
+++ b/_config.yml
@@ -1,22 +1,30 @@
+
 title: "Alper Sager – RWTH Aachen Portfolio"
 description: "Portfolio of Alper Sager, Computer Engineering student at RWTH Aachen University. Focused on AI Systems, Embedded Computing, and EESTEC Leadership."
 theme: minima
 
+# Markdown motoru ve tablo desteği
 markdown: kramdown
 kramdown:
   input: GFM
   hard_wrap: false
+  parse_block_html: true
 
+# Site URL (Google ve sitemap için önemli)
 url: "https://alpersager.github.io"
 
+# Üst menü
 header_pages:
   - about.md
   - projects.md
   - contact.md
 
+# Yazar bilgileri
 author:
   name: "Alper Sager"
   email: "alper.sager@rwth-aachen.de"
 
+# Eklentiler
 plugins:
   - jekyll-sitemap
+  
